# frontier

./: .env.example  .gitignore  ACCESS_INSTRUCTION.md  CLAUDE.md  README.md  aws.md  demo.sh  docker-compose.mpc.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.claude/skills/soda/: README.md  SKILL.md
apps/demo/: package.json
apps/demo/src/: demo.ts  verify.ts
apps/docs/: next.config.mjs  package.json  styles.css  theme.config.tsx  tsconfig.json
apps/docs/components/: CopyPrompt.tsx  icons.tsx
apps/docs/pages/: _app.tsx  _meta.ts  agents.mdx  architecture.mdx  index.mdx  quickstart.mdx
apps/docs/pages/concepts/: _meta.ts  committee.mdx  derivation.mdx  mpc-protocol.mdx  verification.mdx
apps/docs/pages/deploy/: _meta.ts  aws-mpc.mdx
apps/docs/pages/guides/: _meta.ts  index.mdx  sign-an-eth-tx.mdx
apps/docs/pages/reference/: _meta.ts  soda-program.mdx  soda-sdk.mdx
apps/mpc-coordinator/: Dockerfile  package.json  tsconfig.json
apps/mpc-coordinator/src/: server.ts
apps/mpc-node/: .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
apps/mpc-node/scripts/: dkg.ts  update-committee.ts
apps/mpc-node/src/: server.ts  sessions.ts  share.ts
apps/mpc-subscriber/: package.json
apps/mpc-subscriber/src/: index.ts
apps/relayer/: package.json
apps/relayer/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/components/: DerivedAddressCard.tsx  SignAndSendButton.tsx  SignedHexView.tsx  Timeline.tsx
apps/web/lib/: idls.ts  run-demo.ts
apps/web/lib/idl/: README.md  eth_demo.json  soda.json
apps/web/pages/: _app.tsx  index.tsx
apps/web/pages/api/: finalize.ts  group-pk.ts  run.ts
contracts/: Anchor.toml  Cargo.toml
contracts/programs/eth_demo/: Cargo.toml
contracts/programs/eth_demo/src/: eth_rlp.rs  lib.rs  state.rs
contracts/programs/soda/: Cargo.toml
contracts/programs/soda/src/: derivation.rs  errors.rs  lib.rs  state.rs
contracts/programs/soda/src/instructions/: finalize_signature.rs  init_committee.rs  mod.rs  request_signature.rs  update_committee.rs
contracts/signer/: Cargo.toml
contracts/signer/src/: config.rs  derive.rs  event.rs  ix.rs  main.rs
docs/: gpt.md  security.md  short.md  why.md
scripts/: deploy-mpc-aws.sh
