[workspace]
resolver = "2"
members = [
    "programs/soda",
    "programs/eth_demo",
    "signer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "2.1.14"
solana-sdk = "2.1.14"
solana-client = "2.1.14"
tokio = { version = "1.42", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
